--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "capstone-fill",
+  "name": "capstone-coloured",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
